--- a/css/message.css
+++ b/css/message.css
@@ -2,15 +2,15 @@
 
 @font-face {
   font-family: "PixelMplus12";
-  src: url(../Fonts.woff)  format('woff');
+  src: url(../Fonts.woff) format('woff');
 }
 
-.main{
+.main {
   background-image: url(../images/common/背景.png);
   padding-bottom: 20px;
 }
 
-.title{
+.title {
   height: 80px;
   display: flex;
   flex-direction: column;
@@ -20,9 +20,17 @@
   animation: flicker 1.5s infinite alternate;
   color: #00ffff;
 }
+
 @keyframes flicker {
-  0%, 18%, 22%, 25%, 53%, 57%, 100% {
-      text-shadow:
+
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+    text-shadow:
       0 0 4px #fff,
       0 0 11px #fff,
       0 0 19px #fff,
@@ -32,272 +40,339 @@
       0 0 80px #00ffff,
       0 0 100px #00ffff;
   }
-  20%, 24%, 55% {
-      text-shadow: none;
+
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
   }
 }
 
-.box{
-  padding:0 20px;
-  margin:100px 100px 25px 100px;
+.box {
+  padding: 0 20px;
+  margin: 100px 100px 25px 100px;
   padding-bottom: 30px;
   border: 2px solid #e6325f;
-  border-radius:25px;
+  border-radius: 25px;
   box-shadow: 0 0 .2rem #fff,
-  0 0 .2rem #fff,
-  0 0 2rem #e6325f,
-  0 0 0.8rem #e6325f,
-  0 0 2.8rem #e6325f,
-  inset 0 0 1.3rem #e6325f;
+    0 0 .2rem #fff,
+    0 0 2rem #e6325f,
+    0 0 0.8rem #e6325f,
+    0 0 2.8rem #e6325f,
+    inset 0 0 1.3rem #e6325f;
 }
 
-.title h1{
+/*モーダル背景(白いとこ)変更*/
+.modaal-container {
+  background-image: url();
+}
+
+.title h1 {
   font-family: "ab-intore", sans-serif;
   font-size: 50px;
   font-weight: bold;
   margin-top: 70px;
 }
 
-.title p{
+.title p {
   font-size: 24px;
   margin-top: 10px;
 }
 
-.message-list{
+.message-list {
   width: 1200px;
   max-width: 100%;
   margin-top: 25px;
   margin-left: auto;
   margin-right: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit,250px);
+  grid-template-columns: repeat(auto-fit, 250px);
   column-gap: 50px;
   row-gap: 25px;
   justify-content: center;
 }
 
-.trans{
+.trans {
   transform-origin: center;
 }
 
-.trans:hover{
+.trans:hover {
   transform: rotate(10deg);
 }
 
-.message-list dl{
+.message-list dl {
   font-family: "PixelMplus12";
   margin-top: 20px;
   text-align: center;
 }
 
-.message-list dt{
+.message-list dt {
   font-size: 25px;
 }
 
-.message-text{
+.message-text {
   font-family: 'Montagu Slab', serif;
   font-size: 25px;
   line-height: 1.6;
 }
 
-.message-name{
+.message-name {
   font-family: 'Montagu Slab', serif;
   margin-top: 40px;
   font-size: 20px;
   text-align: center;
 }
 
-/*全て共通：hideエリアをはじめは非表示*/
+/*↓ページネーションの設定↓*/
+.example3 {
+  display: flex;
+  justify-content: center;
+}
+
+.example3 li {
+  font-family: "PixelMplus12";
+  font-size: 20px;
+  height: 50px;
+  line-height: 50px;
+  width: 50px;
+  margin: 25px 5px 10px 5px;
+  text-align: center;
+  border: 1px #e6325f solid;
+  color: #00ffff;
+  border-radius: 5px / 5px;
+  box-shadow: 0 0 .1rem #fff,
+    0 0 .1rem #fff,
+    0 0 0.2rem #e6325f,
+    0 0 0.3rem #e6325f,
+    0 0 0.4rem #e6325f,
+    inset 0 0 0.5rem #e6325f;
+}
+
+.example3 .pre {
+  color: #00ffff;
+}
+
+.example3 .this {
+  background-color: #EB4682;
+  color: #00ffff;
+}
+
+.example3 li a {
+  display: block;
+  text-decoration: none;
+}
+
+.example3 li a:hover {
+  background-color: #e6325f;
+}
+
+/*↑ページネーションの設定↑*/
+/*全て共通：expansion-areaをはじめは非表示*/
 .expansion-area {
-	display: none;
+  display: none;
 }
 
 /*全て共通：モーダルのボタンの色を変更したい場合*/
-.modaal-close:after, 
-.modaal-close:before{
-	background:#ccc;	
+.modaal-close:after,
+.modaal-close:before {
+  background: #ccc;
 }
 
 .modaal-close:focus:after,
 .modaal-close:focus:before,
 .modaal-close:hover:after,
-.modaal-close:hover:before{
-	background:#666;
+.modaal-close:hover:before {
+  background: #666;
 }
 
-  /*リンクの形状*/
-  #page-top a{
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    background:#000;
-    border-radius: 1px;
-    border: 5px double #fff;
-    width: 50px;
-    height: 50px;
-    color: #fff;
-    text-align: center;
-    text-transform: uppercase; 
-    text-decoration: none;
-    font-size:10px;
-    transition:all 0.3s;
-  }
-  
-  /*リンクを右下に固定*/
-  #page-top {
-    position: fixed;
-    right: 20px;
-    bottom:20px;
-    z-index: 2;
-      /*はじめは非表示*/
-    opacity: 0;
-    transform: translateX(100px);
-  }
-  
-  /*　左の動き　*/
-  
-  #page-top.LeftMove{
-    animation: LeftAnime 0.5s forwards;
-  }
-  
-  @keyframes LeftAnime{
-    from {
-      opacity: 0;
-    transform: translateX(100px);
-    }
-    to {
-      opacity: 1;
-    transform: translateX(0);
-    }
-  }
-  
-  /*　右の動き　*/
-  
-  #page-top.RightMove{
-    animation: RightAnime 0.5s forwards;
-  }
-  @keyframes RightAnime{
-    from {
-      opacity: 1;
-    transform: translateX(0);
-    }
-    to {
-      opacity: 1;
-    transform: translateX(100px);
-    }
-  }
-
-@media (max-width:800px){
-  .title h1 {
-    font-size: 30px;
-    margin-top: 40px;
-  }
-
-  .title p{
-    font-size: 15px;
-  }
-
-  .message-list{
-    margin-top: 10px;
-    column-gap: 20px;
-    row-gap: 15px;
-    grid-template-columns: repeat(auto-fit,120px);
-  }
-
-  .message-list dl{
-    margin-top: 5px;
-  }
-
-  .message-list dt{
-    font-size: 16px;
-  }
-
-  .message-text{
-    font-size: 15px;
-    line-height: 1.3;
-  }
-  
-  .message-name{
-    margin-top: 40px;
-    font-size: 16px;
-    text-align: center;
-  }
-
-  /*リンクの形状*/
-#page-top a{
-	display: flex;
-	justify-content:center;
-	align-items:center;
-	background:#000;
+/*リンクの形状*/
+#page-top a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
   border-radius: 1px;
   border: 5px double #fff;
   width: 50px;
   height: 50px;
   color: #fff;
   text-align: center;
-  text-transform: uppercase; 
+  text-transform: uppercase;
   text-decoration: none;
-  font-size:10px;
-	transition:all 0.3s;
+  font-size: 10px;
+  transition: all 0.3s;
 }
 
 /*リンクを右下に固定*/
 #page-top {
-	position: fixed;
-	right: 10px;
-	bottom:10px;
-	z-index: 2;
-    /*はじめは非表示*/
-	opacity: 0;
-	transform: translateX(100px);
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  z-index: 2;
+  /*はじめは非表示*/
+  opacity: 0;
+  transform: translateX(100px);
 }
 
 /*　左の動き　*/
 
-#page-top.LeftMove{
-	animation: LeftAnime 0.5s forwards;
+#page-top.LeftMove {
+  animation: LeftAnime 0.5s forwards;
 }
 
-@keyframes LeftAnime{
+@keyframes LeftAnime {
   from {
     opacity: 0;
-	transform: translateX(100px);
+    transform: translateX(100px);
   }
+
   to {
     opacity: 1;
-	transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
 /*　右の動き　*/
 
-#page-top.RightMove{
-	animation: RightAnime 0.5s forwards;
+#page-top.RightMove {
+  animation: RightAnime 0.5s forwards;
 }
-@keyframes RightAnime{
+
+@keyframes RightAnime {
   from {
-  	opacity: 1;
-	transform: translateX(0);
+    opacity: 1;
+    transform: translateX(0);
   }
+
   to {
-  	opacity: 1;
-	transform: translateX(100px);
+    opacity: 1;
+    transform: translateX(100px);
   }
 }
 
-.box{
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-bottom: 15px;
-  margin:40px 15px 10px 15px;
-  border: 2px solid #e6325f;
-  border-radius:25px;
-  box-shadow: 0 0 .2rem #fff,
-  0 0 .2rem #fff,
-  0 0 2rem #e6325f,
-  0 0 0.8rem #e6325f,
-  0 0 2.8rem #e6325f,
-  inset 0 0 1.3rem #e6325f;
-}
+@media (max-width:800px) {
+  .title h1 {
+    font-size: 30px;
+    margin-top: 40px;
+  }
 
+  .title p {
+    font-size: 15px;
+  }
+
+  .message-list {
+    margin-top: 10px;
+    column-gap: 20px;
+    row-gap: 15px;
+    grid-template-columns: repeat(auto-fit, 120px);
+  }
+
+  .message-list dl {
+    margin-top: 5px;
+  }
+
+  .message-list dt {
+    font-size: 16px;
+  }
+
+  .message-text {
+    font-size: 15px;
+    line-height: 1.3;
+  }
+
+  .message-name {
+    margin-top: 40px;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  /*リンクの形状*/
+  #page-top a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+    border-radius: 1px;
+    border: 5px double #fff;
+    width: 50px;
+    height: 50px;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 10px;
+    transition: all 0.3s;
+  }
+
+  /*リンクを右下に固定*/
+  #page-top {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    z-index: 2;
+    /*はじめは非表示*/
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  /*　左の動き　*/
+
+  #page-top.LeftMove {
+    animation: LeftAnime 0.5s forwards;
+  }
+
+  @keyframes LeftAnime {
+    from {
+      opacity: 0;
+      transform: translateX(100px);
+    }
+
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  /*　右の動き　*/
+
+  #page-top.RightMove {
+    animation: RightAnime 0.5s forwards;
+  }
+
+  @keyframes RightAnime {
+    from {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    to {
+      opacity: 1;
+      transform: translateX(100px);
+    }
+  }
+
+  .box {
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 15px;
+    margin: 40px 15px 10px 15px;
+    border: 2px solid #e6325f;
+    border-radius: 25px;
+    box-shadow: 0 0 .2rem #fff,
+      0 0 .2rem #fff,
+      0 0 2rem #e6325f,
+      0 0 0.8rem #e6325f,
+      0 0 2.8rem #e6325f,
+      inset 0 0 1.3rem #e6325f;
+  }
+
+  /*↓ページネーションの設定↓*/
+  .example3 li {
+    font-size: 15px;
+    height: 35px;
+    line-height: 35px;
+    width: 35px;
+  }
+
+  /*↑ページネーションの設定↑*/
 }
