--- a/css/index.css
+++ b/css/index.css
@@ -9,22 +9,22 @@
 }
 
 ul,
-ol{
+ol {
   list-style: none;
 }
 
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
 
-body{
+body {
   font-family: "ab-intore", sans-serif;
   line-height: 1;
   background-color: #e6325f;
 }
 
-img{
+img {
   max-width: 100%;
 }
 
@@ -40,16 +40,16 @@ img{
   align-items: center;
 }
 
-.header-logo{
+.header-logo {
   display: block;
-  width: 900px; 
+  width: 900px;
 }
 
-.main{
+.main {
   color: #00ffff;
-  }
+}
 
-.footer{
+.footer {
   color: #fff;
   background-color: #e6325f;
   font-family: 'Montagu Slab', serif;
@@ -57,33 +57,33 @@ img{
   padding-bottom: 15px;
 }
 
-.footer-注意事項{
+.footer-注意事項 {
   font-weight: 600;
   font-size: 12px;
   margin-top: 5px;
   text-align: center;
 }
 
-.footer-text2{
-display: flex;
-justify-content: center;
-margin-top: 20px;
+.footer-text2 {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-.contact{
+.contact {
   border: 2.5px solid #fff;
   padding: 5px 10px;
   margin-right: 100px;
 }
 
-.copyright{
+.copyright {
   text-align: center;
   font-size: 12px;
   margin-left: 100px;
 }
 
-.first-view{
-  height:calc(100vh - 80px);
+.first-view {
+  height: calc(100vh - 80px);
   background-image: url(../images/common/背景.png);
   background-repeat: no-repeat;
   background-position: center 10%;
@@ -105,8 +105,15 @@ margin-top: 20px;
 }
 
 @keyframes flicker {
-  0%, 18%, 22%, 25%, 53%, 57%, 100% {
-      text-shadow:
+
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+    text-shadow:
       0 0 4px #fff,
       0 0 11px #fff,
       0 0 19px #fff,
@@ -115,8 +122,11 @@ margin-top: 20px;
       0 0 70px #00ffff,
       0 0 80px #00ffff;
   }
-  20%, 24%, 55% {
-      text-shadow: none;
+
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
   }
 }
 
@@ -134,7 +144,7 @@ margin-top: 20px;
   max-width: 100%;
 }
 
-.chapter{
+.chapter {
   font-size: 30px;
   margin-bottom: 15px;
   text-align: left;
@@ -164,62 +174,65 @@ margin-top: 20px;
 /*== ボタン共通設定 */
 .btn {
   /*アニメーションの起点とするためrelativeを指定*/
-    position: relative;
-    overflow: hidden;
-    /*ボタンの形状*/
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: right;
-    text-align: right;
-    padding-right: 50px;
-    border: 2.5px solid #e6325f;/* ボーダーの色と太さ */
-    box-shadow: 0 0 .2rem #fff,
+  position: relative;
+  overflow: hidden;
+  /*ボタンの形状*/
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  text-align: right;
+  padding-right: 50px;
+  border: 2.5px solid #e6325f;
+  /* ボーダーの色と太さ */
+  box-shadow: 0 0 .2rem #fff,
     0 0 .2rem #fff,
     0 0 2rem #e6325f,
     0 0 0.8rem #e6325f,
     0 0 2.8rem #e6325f,
     inset 0 0 1.3rem #e6325f;
-    font-size: 45px;
-    height: 170px;
-    outline: none;
-    /*アニメーションの指定*/
-    transition: ease .2s;
+  font-size: 45px;
+  height: 170px;
+  outline: none;
+  /*アニメーションの指定*/
+  transition: ease .2s;
 }
 
 /*ボタン内spanの形状*/
 .btn span {
-position: relative;
-z-index: 3;/*z-indexの数値をあげて文字を背景よりも手前に表示*/
-color:#00ffff;
+  position: relative;
+  z-index: 3;
+  /*z-indexの数値をあげて文字を背景よりも手前に表示*/
+  color: #00ffff;
 }
 
-.btn:hover span{
-color:#00ffff;
+.btn:hover span {
+  color: #00ffff;
 }
 
 /*== 背景が流れる（左から右） */
 .bgleft:before {
- content: '';
+  content: '';
   /*絶対配置で位置を指定*/
- position: absolute;
- top: 0;
- left: 0;
- z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
   /*色や形状*/
- background:#E6325F;/*背景色*/
- width: 100%;
-height: 100%;
+  background: #E6325F;
+  /*背景色*/
+  width: 100%;
+  height: 100%;
   /*アニメーション*/
- transition: transform .6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
- transform: scale(0, 1);
-transform-origin: right top;
+  transition: transform .6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+  transform: scale(0, 1);
+  transform-origin: right top;
 }
 
 /*hoverした際の形状*/
-.bgleft:hover:before{
-transform-origin:left top;
-transform:scale(1, 1);
+.bgleft:hover:before {
+  transform-origin: left top;
+  transform: scale(1, 1);
 }
 
 /*========= LoadingのためのCSS ===============*/
@@ -227,27 +240,27 @@ transform:scale(1, 1);
 /* Loading背景画面設定　*/
 #splash {
   /*fixedで全面に固定*/
-position: fixed;
-width: 100%;
-height: 100%;
-z-index: 999;
-text-align:center;
-color:#fff;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  text-align: center;
+  color: #fff;
 }
 
 /* Loading画像中央配置　*/
 #splash_text {
-position: absolute;
-top: 50%;
-left: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   z-index: 999;
-transform: translate(-50%, -50%);
-color: #fff;
-width: 100%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  width: 100%;
 }
 
 /*IE11対策用バーの線の高さ※対応しなければ削除してください*/
-#splash_text svg{
+#splash_text svg {
   height: 2px;
 }
 
@@ -259,6 +272,7 @@ width: 100%;
   transition: all .3s cubic-bezier(.04, .435, .315, .9);
   transform: scaleY(1);
 }
+
 /*上の画面*/
 .loader_cover-up {
   transform-origin: center top;
@@ -270,12 +284,13 @@ width: 100%;
   bottom: 0;
   transform-origin: center bottom;
 }
+
 /*クラス名がついたらY軸方向に0*/
 .coveranime {
   transform: scaleY(0);
 }
 
-.access{
+.access {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -283,17 +298,17 @@ width: 100%;
   font-size: 20px;
 }
 
-@media (max-width:800px){
-  .site-menu ul{
+@media (max-width:800px) {
+  .site-menu ul {
     display: block;
     text-align: center;
   }
 
-  .site-menu li{
-    margin-top:20px;
+  .site-menu li {
+    margin-top: 20px;
   }
 
-  .header{
+  .header {
     position: fixed;
     top: 0;
     left: 0;
@@ -308,25 +323,26 @@ width: 100%;
     box-shadow: 0 3px 6px rgba(0, 255, 255, 1);
   }
 
-  .header-logo img{
+  .header-logo img {
     opacity: 0
   }
 
-  .header-inner{
+  .header-inner {
     padding-left: 20px;
     padding-right: 20px;
     height: 100%;
     position: relative;
   }
-  .header-logo{
+
+  .header-logo {
     width: auto;
   }
 
-  .main{
+  .main {
     padding-top: 70px;
   }
 
-  .footer-注意事項{
+  .footer-注意事項 {
     font-family: 'Montagu Slab', serif;
     font-weight: 600;
     font-size: 10px;
@@ -336,25 +352,25 @@ width: 100%;
     text-align: center;
   }
 
-    .footer-text2 {
-      display: flex;
-      justify-content: center;
-      margin-top: 10px;
-    }
-  
-    .contact {
-      border: 2px solid #fff;
-      padding: 5px 10px;
-      margin-right: 20px;
-      font-size: 12px;
-      margin-bottom: 5px;
-    }
-  
-    .copyright {
-      text-align: center;
-      font-size: 10px;
-      margin-left: 20px;
-    }
+  .footer-text2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+
+  .contact {
+    border: 2px solid #fff;
+    padding: 5px 10px;
+    margin-right: 20px;
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+
+  .copyright {
+    text-align: center;
+    font-size: 10px;
+    margin-left: 20px;
+  }
 
   .first-view {
     height: calc(100vh - 50px);
@@ -363,7 +379,8 @@ width: 100%;
     height: 100%;
     max-width: 100%;
   }
-  .first-view-text{
+
+  .first-view-text {
     padding-top: 10px;
     padding-left: 25px;
   }
@@ -378,7 +395,7 @@ width: 100%;
     margin-top: 5px;
   }
 
-  .link-button-area{
+  .link-button-area {
     text-align: center;
     margin-top: 20px;
   }
@@ -406,54 +423,64 @@ width: 100%;
     height: 100%;
     max-width: 100%;
   }
-  
-.title2 {
-  font-family: "ab-intore", sans-serif;
-  font-size: 15px;
-  margin-top: 30px;
-  animation: flicker1 1.5s infinite alternate;
-  color: #00ffff;
-}
 
-@keyframes flicker1 {
-  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+  .title2 {
+    font-family: "ab-intore", sans-serif;
+    font-size: 15px;
+    margin-top: 30px;
+    animation: flicker1 1.5s infinite alternate;
+    color: #00ffff;
+  }
+
+  @keyframes flicker1 {
+
+    0%,
+    18%,
+    22%,
+    25%,
+    53%,
+    57%,
+    100% {
       text-shadow:
-      0 0 4px #fff,
-      0 0 11px #fff,
-      0 0 19px #fff,
-      0 0 40px #00ffff,
-      0 0 60px #00ffff,
-      0 0 70px #00ffff,
-      0 0 80px #00ffff,
-      0 0 100px #00ffff;
-  }
-  20%, 24%, 55% {
-      text-shadow: none;
-  }
-}
+        0 0 4px #fff,
+        0 0 11px #fff,
+        0 0 19px #fff,
+        0 0 40px #00ffff,
+        0 0 60px #00ffff,
+        0 0 70px #00ffff,
+        0 0 80px #00ffff,
+        0 0 100px #00ffff;
+    }
 
-  .chapter{
+    20%,
+    24%,
+    55% {
+      text-shadow: none;
+    }
+  }
+
+  .chapter {
     font-size: 20px;
     margin-bottom: 10px;
     text-align: left;
   }
-  
+
   .flex-item1 {
-    margin-top: 30px; 
+    margin-top: 30px;
   }
 
   .flex-item {
-    margin-top: 60px; 
+    margin-top: 60px;
   }
 
-  .access{
+  .access {
     margin-top: 25px;
     font-size: 13px;
   }
 
   /*== ボタン共通設定 */
-.btn {
-  /*アニメーションの起点とするためrelativeを指定*/
+  .btn {
+    /*アニメーションの起点とするためrelativeを指定*/
     position: relative;
     overflow: hidden;
     /*ボタンの形状*/
@@ -465,52 +492,55 @@ width: 100%;
     max-height: 100%;
     text-align: right;
     padding-right: 15px;
-    border: 2.5px solid #e6325f;/* ボーダーの色と太さ */
+    border: 2.5px solid #e6325f;
+    /* ボーダーの色と太さ */
     box-shadow: 0 0 .2rem #fff,
-    0 0 .2rem #fff,
-    0 0 2rem #e6325f,
-    0 0 0.8rem #e6325f,
-    0 0 1.2rem #e6325f,
-    inset 0 0 1.3rem #e6325f;
+      0 0 .2rem #fff,
+      0 0 2rem #e6325f,
+      0 0 0.8rem #e6325f,
+      0 0 1.2rem #e6325f,
+      inset 0 0 1.3rem #e6325f;
     font-size: 25px;
     height: 100px;
     outline: none;
     /*アニメーションの指定*/
     transition: ease .2s;
-}
+  }
 
-/*ボタン内spanの形状*/
-.btn span {
-position: relative;
-z-index: 3;/*z-indexの数値をあげて文字を背景よりも手前に表示*/
-color:#00ffff;
-}
+  /*ボタン内spanの形状*/
+  .btn span {
+    position: relative;
+    z-index: 3;
+    /*z-indexの数値をあげて文字を背景よりも手前に表示*/
+    color: #00ffff;
+  }
 
-.btn:hover span{
-color:#00ffff;
-}
+  .btn:hover span {
+    color: #00ffff;
+  }
 
-/*== 背景が流れる（左から右） */
-.bgleft:before {
- content: '';
-  /*絶対配置で位置を指定*/
- position: absolute;
- top: 0;
- left: 0;
- z-index: 2;
-  /*色や形状*/
- background:#E6325F;/*背景色*/
- width: 100%;
-height: 100%;
-  /*アニメーション*/
- transition: transform .6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
- transform: scale(0, 1);
-transform-origin: right top;
-}
+  /*== 背景が流れる（左から右） */
+  .bgleft:before {
+    content: '';
+    /*絶対配置で位置を指定*/
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    /*色や形状*/
+    background: #E6325F;
+    /*背景色*/
+    width: 100%;
+    height: 100%;
+    /*アニメーション*/
+    transition: transform .6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+    transform: scale(0, 1);
+    transform-origin: right top;
+  }
 
-/*hoverした際の形状*/
-.bgleft:hover:before{
-transform-origin:left top;
-transform:scale(1, 1);
-}
+  /*hoverした際の形状*/
+  .bgleft:hover:before {
+    transform-origin: left top;
+    transform: scale(1, 1);
+  }
 }
