--- a/css/creator.css
+++ b/css/creator.css
@@ -2,15 +2,15 @@
 
 @font-face {
   font-family: "PixelMplus12";
-  src: url(../Fonts.woff)  format('woff');
+  src: url(../Fonts.woff) format('woff');
 }
 
-.main{
+.main {
   background-image: url(/images/common/背景.png);
   padding-bottom: 20px;
 }
 
-.title{
+.title {
   height: 80px;
   display: flex;
   flex-direction: column;
@@ -20,9 +20,17 @@
   animation: flicker 1.5s infinite alternate;
   color: #00ffff;
 }
+
 @keyframes flicker {
-  0%, 18%, 22%, 25%, 53%, 57%, 100% {
-      text-shadow:
+
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+    text-shadow:
       0 0 4px #fff,
       0 0 11px #fff,
       0 0 19px #fff,
@@ -32,38 +40,47 @@
       0 0 80px #00ffff,
       0 0 100px #00ffff;
   }
-  20%, 24%, 55% {
-      text-shadow: none;
+
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
   }
 }
-.box{
+
+.box {
   font-family: "PixelMplus12";
-  padding:0 20px;
-  margin:100px 100px 25px 100px;
+  padding: 0 20px;
+  margin: 100px 100px 25px 100px;
   padding-bottom: 50px;
   border: 2px solid #e6325f;
-  border-radius:25px;
+  border-radius: 25px;
   box-shadow: 0 0 .2rem #fff,
-  0 0 .2rem #fff,
-  0 0 2rem #e6325f,
-  0 0 0.8rem #e6325f,
-  0 0 2.8rem #e6325f,
-  inset 0 0 1.3rem #e6325f;
+    0 0 .2rem #fff,
+    0 0 2rem #e6325f,
+    0 0 0.8rem #e6325f,
+    0 0 2.8rem #e6325f,
+    inset 0 0 1.3rem #e6325f;
 }
-.title h1{
+
+.title h1 {
   font-family: "ab-intore", sans-serif;
   font-size: 50px;
   margin-top: 70px;
 }
 
-.title p{
+.title p {
   font-size: 24px;
   margin-top: 10px;
 }
 
-.Illustration-top,.message-top,.organizer-top,.websiteseisaku-top{
-	display: flex;
-	align-items: center;
+.Illustration-top,
+.message-top,
+.organizer-top,
+.chronology-top,
+.websiteseisaku-top {
+  display: flex;
+  align-items: center;
   margin-top: 50px;
   text-align: center;
   font-size: 30px;
@@ -73,43 +90,67 @@
 .Illustration-top:after {
   content: "";
   flex-grow: 1;
-  height: 2px; /* 線の太さ */
-  background: #00ffff; /* 線の色 */
-  margin:0 50px; /* 文字と線の余白 */
-
+  height: 2px;
+  /* 線の太さ */
+  background: #00ffff;
+  /* 線の色 */
+  margin: 0 50px;
+  /* 文字と線の余白 */
 }
 
 .message-top:before,
 .message-top:after {
   content: "";
   flex-grow: 1;
-  height: 2px; /* 線の太さ */
-  background: #00ffff; /* 線の色 */
-  margin:0 50px; /* 文字と線の余白 */
-
+  height: 2px;
+  /* 線の太さ */
+  background: #00ffff;
+  /* 線の色 */
+  margin: 0 50px;
+  /* 文字と線の余白 */
 }
 
 .organizer-top:before,
 .organizer-top:after {
   content: "";
   flex-grow: 1;
-  height: 2px; /* 線の太さ */
-  background: #00ffff; /* 線の色 */
-  margin:0 50px; /* 文字と線の余白 */
-
+  height: 2px;
+  /* 線の太さ */
+  background: #00ffff;
+  /* 線の色 */
+  margin: 0 50px;
+  /* 文字と線の余白 */
 }
 
 .websiteseisaku-top:before,
 .websiteseisaku-top:after {
   content: "";
   flex-grow: 1;
-  height: 2px; /* 線の太さ */
-  background: #00ffff; /* 線の色 */
-  margin:0 50px; /* 文字と線の余白 */
-
+  height: 2px;
+  /* 線の太さ */
+  background: #00ffff;
+  /* 線の色 */
+  margin: 0 50px;
+  /* 文字と線の余白 */
 }
 
-.Illustration-list ,.message-list,.organizer-list,.websiteseisaku-list{
+.chronology-top:before,
+.chronology-top:after {
+  content: "";
+  flex-grow: 1;
+  height: 2px;
+  /* 線の太さ */
+  background: #00ffff;
+  /* 線の色 */
+  margin: 0 50px;
+  /* 文字と線の余白 */
+}
+
+.Illustration-list,
+.message-list,
+.organizer-list,
+.chronology-list,
+.websiteseisaku-list {
   list-style: none;
   width: 1200px;
   max-width: 100%;
@@ -119,15 +160,16 @@
   padding-left: 30px;
   padding-right: 30px;
   display: grid;
-  grid-template-columns: repeat(auto-fit,270px);
+  grid-template-columns: repeat(auto-fit, 270px);
   column-gap: 20px;
   row-gap: 30px;
   justify-content: space-around;
   text-align: center;
   font-size: 27px;
 }
-.hover:hover{
-color: #e6325f;
+
+.hover:hover {
+  color: #e6325f;
 }
 
 /*リンクの形状*/
@@ -195,98 +237,129 @@ color: #e6325f;
   }
 }
 
-@media (max-width:800px){
+@media (max-width:800px) {
   .title h1 {
     font-size: 30px;
     margin-top: 40px;
   }
 
-  .title p{
+  .title p {
     font-size: 15px;
   }
 
-  .box{
+  .box {
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 15px;
-    margin:40px 15px 10px 15px;
+    margin: 40px 15px 10px 15px;
     border: 2px solid #e6325f;
-    border-radius:25px;
+    border-radius: 25px;
     box-shadow: 0 0 .2rem #fff,
-    0 0 .2rem #fff,
-    0 0 2rem #e6325f,
-    0 0 0.8rem #e6325f,
-    0 0 2.8rem #e6325f,
-    inset 0 0 1.3rem #e6325f;
+      0 0 .2rem #fff,
+      0 0 2rem #e6325f,
+      0 0 0.8rem #e6325f,
+      0 0 2.8rem #e6325f,
+      inset 0 0 1.3rem #e6325f;
   }
 
-  .Illustration-top,.message-top,.organizer-top,.websiteseisaku-top{
+  .Illustration-top,
+  .message-top,
+  .organizer-top,
+  .chronology-top,
+  .websiteseisaku-top {
     display: flex;
     align-items: center;
     margin-top: 50px;
     text-align: center;
     font-size: 20px;
   }
-  
+
   .Illustration-top:before,
   .Illustration-top:after {
     content: "";
     flex-grow: 1;
-    height: 2px; /* 線の太さ */
-    background: #00ffff; /* 線の色 */
-    margin:0 15px; /* 文字と線の余白 */
+    height: 2px;
+    /* 線の太さ */
+    background: #00ffff;
+    /* 線の色 */
+    margin: 0 15px;
+    /* 文字と線の余白 */
   }
-  
+
   .message-top:before,
   .message-top:after {
     content: "";
     flex-grow: 1;
-    height: 2px; /* 線の太さ */
-    background: #00ffff; /* 線の色 */
-    margin:0 15px; /* 文字と線の余白 */
+    height: 2px;
+    /* 線の太さ */
+    background: #00ffff;
+    /* 線の色 */
+    margin: 0 15px;
+    /* 文字と線の余白 */
   }
-  
+
+  .chronology-top:before,
+  .chronology-top:after {
+    content: "";
+    flex-grow: 1;
+    height: 2px;
+    /* 線の太さ */
+    background: #00ffff;
+    /* 線の色 */
+    margin: 0 15px;
+    /* 文字と線の余白 */
+  }
+
   .websiteseisaku-top:before,
   .websiteseisaku-top:after {
     content: "";
     flex-grow: 1;
-    height: 2px; /* 線の太さ */
-    background: #00ffff; /* 線の色 */
-    margin:0 15px; /* 文字と線の余白 */
+    height: 2px;
+    /* 線の太さ */
+    background: #00ffff;
+    /* 線の色 */
+    margin: 0 15px;
+    /* 文字と線の余白 */
   }
 
   .organizer-top:before,
   .organizer-top:after {
     content: "";
     flex-grow: 1;
-    height: 2px; /* 線の太さ */
-    background: #00ffff; /* 線の色 */
-    margin:0 15px; /* 文字と線の余白 */
+    height: 2px;
+    /* 線の太さ */
+    background: #00ffff;
+    /* 線の色 */
+    margin: 0 15px;
+    /* 文字と線の余白 */
   }
-  
-  .Illustration-list ,.message-list{
+
+  .Illustration-list,
+  .message-list {
     width: 800px;
-      max-width: 100%;
-      margin-top: 20px;
-      padding-left: 15px;
-      padding-right: 15px;
-      font-size: 18px;
-      grid-template-columns: repeat(auto-fit, 120px);
-      column-gap: 20px;
-      row-gap: 30px;
-    }
-    .organizer-list,.websiteseisaku-list{
-      width: 800px;
-        max-width: 100%;
-        margin-top: 20px;
-        padding-left: 15px;
-        padding-right: 15px;
-        font-size: 18px;
-        grid-template-columns: repeat(auto-fit, 180px);
-      }
-  
-  .hover:hover{
-  color: #e6325f;
+    max-width: 100%;
+    margin-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 18px;
+    grid-template-columns: repeat(auto-fit, 120px);
+    column-gap: 20px;
+    row-gap: 30px;
+  }
+
+  .organizer-list,
+  .websiteseisaku-list {
+    width: 800px;
+    max-width: 100%;
+    margin-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 18px;
+    grid-template-columns: repeat(auto-fit, 180px);
+  }
+
+  .hover:hover {
+    color: #e6325f;
   }
 
   /*リンクの形状*/
