--- a/css/common.css
+++ b/css/common.css
@@ -9,23 +9,23 @@
 }
 
 ul,
-ol{
+ol {
   list-style: none;
 }
 
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
 
-body{
+body {
   font-family: 'Montagu Slab', serif;
-  font-size: clamp(1rem, 1.5vw, 1.3rem); 
+  font-size: clamp(1rem, 1.5vw, 1.3rem);
   line-height: 1;
   background-color: #e6325f;
 }
 
-img{
+img {
   max-width: 100%;
 }
 
@@ -46,10 +46,11 @@ img{
   display: none;
 }
 
-.header-logo{
+.header-logo {
   display: flex;
   width: 500px;
-  min-width: 150px; /* 最小幅 */
+  min-width: 150px;
+  /* 最小幅 */
 }
 
 .site-menu ul {
@@ -61,58 +62,59 @@ img{
   margin-right: 20px;
 }
 
-.site-menu ul li a{
+.site-menu ul li a {
   font-family: "ab-intore", sans-serif;
   font-weight: bold;
 }
 
-.main{
+.main {
   color: #00ffff;
-  }
+}
 
-  .footer{
-    color: #fff;
-    background-color: #e6325f;
-    padding-top: 10px;
-    padding-bottom: 15px;
-  }
-  
-  .footer-注意事項{
-    font-family: 'Montagu Slab', serif;
-    font-weight: 600;
-    font-size: 12px;
-    margin-top: 5px;
-    text-align: center;
-  }
-  
-  .footer-text2{
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    }
-    
-    .contact{
-      border: 2.5px solid #fff;
-      padding: 5px 10px;
-      margin-right: 100px;
-    }
-    
-    .copyright{
-      text-align: center;
-      font-size: 12px;
-      margin-left: 100px;
-    }
-    @media (max-width: 1024px){
-  .site-menu ul{
+.footer {
+  color: #fff;
+  background-color: #e6325f;
+  padding-top: 10px;
+  padding-bottom: 15px;
+}
+
+.footer-注意事項 {
+  font-family: 'Montagu Slab', serif;
+  font-weight: 600;
+  font-size: 12px;
+  margin-top: 5px;
+  text-align: center;
+}
+
+.footer-text2 {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.contact {
+  border: 2.5px solid #fff;
+  padding: 5px 10px;
+  margin-right: 100px;
+}
+
+.copyright {
+  text-align: center;
+  font-size: 12px;
+  margin-left: 100px;
+}
+
+@media (max-width: 1024px) {
+  .site-menu ul {
     display: block;
     text-align: center;
   }
 
-  .site-menu li{
-    margin-top:20px;
+  .site-menu li {
+    margin-top: 35px;
   }
 
-  .header{
+  .header {
     position: fixed;
     top: 0;
     left: 0;
@@ -122,38 +124,39 @@ img{
     background-repeat: no-repeat;
     background-position: center;
     background-color: #e6325f;
-    height: 65px;
+    height: 90px;
     z-index: 10;
     box-shadow: 0 3px 6px rgba(0, 255, 255, 1);
   }
 
-  .header-logo img{
+  .header-logo img {
     opacity: 0
   }
 
-  .header-inner{
+  .header-inner {
     padding-left: 20px;
     padding-right: 20px;
     height: 100%;
     position: relative;
   }
-  .header-logo{
+
+  .header-logo {
     width: auto;
   }
 
-  .header-site-menu{
+  .header-site-menu {
     position: absolute;
     top: 100%;
     left: 0;
     right: 0;
     color: aqua;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     padding-top: 5px;
     padding-bottom: 20px;
     display: none;
   }
 
-  .header-site-menu.is-show{
+  .header-site-menu.is-show {
     display: block;
   }
 
@@ -171,21 +174,22 @@ img{
     outline: none;
   }
 
-  .main{
-    padding-top: 65px;
+  .main {
+    padding-top: 90px;
   }
 }
-@media (max-width: 800px){
-  .site-menu ul{
+
+@media (max-width: 800px) {
+  .site-menu ul {
     display: block;
     text-align: center;
   }
 
-  .site-menu li{
-    margin-top:20px;
+  .site-menu li {
+    margin-top: 20px;
   }
 
-  .header{
+  .header {
     position: fixed;
     top: 0;
     left: 0;
@@ -200,33 +204,34 @@ img{
     box-shadow: 0 3px 6px rgba(0, 255, 255, 1);
   }
 
-  .header-logo img{
+  .header-logo img {
     opacity: 0
   }
 
-  .header-inner{
+  .header-inner {
     padding-left: 20px;
     padding-right: 20px;
     height: 100%;
     position: relative;
   }
-  .header-logo{
+
+  .header-logo {
     width: auto;
   }
 
-  .header-site-menu{
+  .header-site-menu {
     position: absolute;
     top: 100%;
     left: 0;
     right: 0;
     color: aqua;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     padding-top: 5px;
     padding-bottom: 20px;
     display: none;
   }
 
-  .header-site-menu.is-show{
+  .header-site-menu.is-show {
     display: block;
   }
 
@@ -244,11 +249,11 @@ img{
     outline: none;
   }
 
-  .main{
+  .main {
     padding-top: 65px;
   }
 
-  .footer-注意事項{
+  .footer-注意事項 {
     font-family: 'Montagu Slab', serif;
     font-weight: 600;
     font-size: 10px;
