--- a/css/chronology.css
+++ b/css/chronology.css
@@ -2,15 +2,15 @@
 
 @font-face {
   font-family: "PixelMplus12";
-  src: url(../Fonts.woff)  format('woff');
+  src: url(../Fonts.woff) format('woff');
 }
 
-.main{
+.main {
   background-image: url(/images/common/背景.png);
   padding-bottom: 5px;
 }
 
-.title{
+.title {
   height: 80px;
   display: flex;
   flex-direction: column;
@@ -20,9 +20,17 @@
   animation: flicker 1.5s infinite alternate;
   color: #00ffff;
 }
+
 @keyframes flicker {
-  0%, 18%, 22%, 25%, 53%, 57%, 100% {
-      text-shadow:
+
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+    text-shadow:
       0 0 4px #fff,
       0 0 11px #fff,
       0 0 19px #fff,
@@ -32,23 +40,26 @@
       0 0 80px #00ffff,
       0 0 100px #00ffff;
   }
-  20%, 24%, 55% {
-      text-shadow: none;
+
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
   }
 }
 
-.title h1{
+.title h1 {
   font-family: "ab-intore", sans-serif;
   font-size: 50px;
   margin-top: 70px;
 }
 
-.title p{
+.title p {
   font-size: 24px;
   margin-top: 10px;
 }
 
-.title2{
+.title2 {
   margin-top: 25px;
   display: flex;
   flex-direction: column;
@@ -57,33 +68,34 @@
   color: #00ffffff;
 }
 
-.title2 h4{
+.title2 h4 {
   font-size: 28px;
 }
 
-.title2 p{
+.title2 p {
   font-size: 20px;
   margin-top: 5px;
 }
 
-.box{
+.box {
   font-family: "PixelMplus12";
-  padding:0 20px;
-  margin:100px 100px 25px 100px;
+  padding: 0 20px;
+  margin: 100px 100px 25px 100px;
   padding-bottom: 30px;
   border: 2px solid #e6325f;
-  border-radius:25px;
+  border-radius: 25px;
   box-shadow: 0 0 .2rem #fff,
-  0 0 .2rem #fff,
-  0 0 2rem #e6325f,
-  0 0 0.8rem #e6325f,
-  0 0 2.8rem #e6325f,
-  inset 0 0 1.3rem #e6325f;
+    0 0 .2rem #fff,
+    0 0 2rem #e6325f,
+    0 0 0.8rem #e6325f,
+    0 0 2.8rem #e6325f,
+    inset 0 0 1.3rem #e6325f;
 
 }
 
 .flex1 {
-  display: flex; /*横並び*/
+  display: flex;
+  /*横並び*/
   width: 1200px;
   max-width: 100%;
   margin-top: 50px;
@@ -91,16 +103,18 @@
   margin-right: auto;
   padding: 20px;
   border: 2px solid #e6325f;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .flex .image {
-  width: 640px; /*画像サイズ指定*/
+  width: 640px;
+  /*画像サイズ指定*/
   margin: 0;
   padding: 0;
   overflow: hidden;
   position: relative;
 }
+
 .flex .right {
   margin: 0 0 0 20px;
   padding: 0;
@@ -111,11 +125,12 @@
   font-size: 24px;
   line-height: 1.5;
 }
+
 .contents-text1 {
   margin-top: 20px;
   margin-left: 30px;
   font-size: 21px;
-  text-indent:1em;
+  text-indent: 1em;
   padding-left: 1em;
   line-height: 1.2;
 }
@@ -124,18 +139,21 @@
 .spoiler {
   padding: 0 4px;
   color: transparent;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
   border-radius: 4px;
 }
+
 .spoiler:hover,
 .spoiler:active {
   color: #00ffffff;
   background: transparent;
 }
+
 /*↑ネタバレ防止の海苔↑*/
 
-.flex2{
-  display: flex; /*横並び*/
+.flex2 {
+  display: flex;
+  /*横並び*/
   flex-direction: row-reverse;
   width: 1200px;
   max-width: 100%;
@@ -144,22 +162,24 @@
   margin-right: auto;
   padding: 20px;
   border: 2px solid #e6325f;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .flex .left {
   margin: 0 0 0 20px;
   padding: 0;
 }
+
 .contents-title2 {
   font-size: 24px;
   line-height: 1.5;
 }
+
 .contents-text2 {
   margin-top: 20px;
   margin-right: 30px;
   font-size: 22px;
-  text-indent:1em;
+  text-indent: 1em;
   line-height: 1.2;
 }
 
@@ -169,11 +189,13 @@
   overflow: hidden;
   position: relative;
 }
+
 .flex .image::before {
   content: "";
   display: block;
   padding-top: 58%;
 }
+
 .flex .image img {
   width: 100%;
   position: absolute;
@@ -253,93 +275,94 @@
 
 /* 左から */
 
-.fadeLeft{
-  animation-name:fadeLeftAnime;
-  animation-duration:1s;
-  animation-fill-mode:forwards;
-  opacity:0;
-  }
-  
-  @keyframes fadeLeftAnime{
-    from {
-      opacity: 0;
+.fadeLeft {
+  animation-name: fadeLeftAnime;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeLeftAnime {
+  from {
+    opacity: 0;
     transform: translateX(-500px);
-    }
-  
-    to {
-      opacity: 1;
+  }
+
+  to {
+    opacity: 1;
     transform: translateX(0);
-    }
   }
-  
-  /* 右から */
-  
-  .fadeRight{
-  animation-name:fadeRightAnime;
-  animation-duration:1s;
-  animation-fill-mode:forwards;
-  opacity:0;
-  }
-  
-  @keyframes fadeRightAnime{
-    from {
-      opacity: 0;
+}
+
+/* 右から */
+
+.fadeRight {
+  animation-name: fadeRightAnime;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeRightAnime {
+  from {
+    opacity: 0;
     transform: translateX(500px);
-    }
-  
-    to {
-      opacity: 1;
+  }
+
+  to {
+    opacity: 1;
     transform: translateX(0);
-    }
   }
-  
-  
-  /* スクロールをしたら出現する要素にはじめに透過0を指定　*/
-   
-  .fadeUpTrigger{
-      opacity: 0;
-  }
-  @media (max-width:1180px) {
-/*ふわっとさせる*/
+}
 
-/* その場で */
 
-.fadeLeft{
-  animation-name:fadeLeftAnime;
-  animation-duration:1s;
-  animation-fill-mode:forwards;
-  opacity:0;
-  }
-  
-  @keyframes fadeLeftAnime{
-    from {
-      opacity: 0;
-    }
-  
-    to {
-      opacity: 1;
-    }
-  }
-  
+/* スクロールをしたら出現する要素にはじめに透過0を指定　*/
+
+.fadeUpTrigger {
+  opacity: 0;
+}
+
+@media (max-width:1180px) {
+  /*ふわっとさせる*/
+
   /* その場で */
-  
-  .fadeRight{
-  animation-name:fadeRightAnime;
-  animation-duration:1s;
-  animation-fill-mode:forwards;
-  opacity:0;
+
+  .fadeLeft {
+    animation-name: fadeLeftAnime;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    opacity: 0;
   }
-  
-  @keyframes fadeRightAnime{
+
+  @keyframes fadeLeftAnime {
     from {
       opacity: 0;
     }
-  
+
     to {
       opacity: 1;
     }
   }
+
+  /* その場で */
+
+  .fadeRight {
+    animation-name: fadeRightAnime;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    opacity: 0;
   }
+
+  @keyframes fadeRightAnime {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+}
 
 @media (max-width:800px) {
 
@@ -407,16 +430,17 @@
       transform: translateX(100px);
     }
   }
+
   .title h1 {
     font-size: 30px;
     margin-top: 40px;
   }
 
-  .title p{
+  .title p {
     font-size: 15px;
   }
-  
-  .title2{
+
+  .title2 {
     margin-top: 15px;
     display: flex;
     flex-direction: column;
@@ -424,33 +448,34 @@
     align-items: center;
     color: #00ffffff;
   }
-  
-  .title2 h4{
+
+  .title2 h4 {
     font-size: 24px;
   }
-  
-  .title2 p{
+
+  .title2 p {
     font-size: 16px;
     margin-top: 5px;
   }
-  
-  .box{
+
+  .box {
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 15px;
-    margin:40px 15px 10px 15px;
+    margin: 40px 15px 10px 15px;
     border: 2px solid #e6325f;
-    border-radius:25px;
+    border-radius: 25px;
     box-shadow: 0 0 .2rem #fff,
-    0 0 .2rem #fff,
-    0 0 2rem #e6325f,
-    0 0 0.8rem #e6325f,
-    0 0 2.8rem #e6325f,
-    inset 0 0 1.3rem #e6325f;
+      0 0 .2rem #fff,
+      0 0 2rem #e6325f,
+      0 0 0.8rem #e6325f,
+      0 0 2.8rem #e6325f,
+      inset 0 0 1.3rem #e6325f;
   }
-  
+
   .flex1 {
-    display: flex; /*横並び*/
+    display: flex;
+    /*横並び*/
     flex-direction: column;
     width: 800px;
     max-width: 100%;
@@ -459,31 +484,37 @@
     margin-right: auto;
     margin-bottom: 50px;
   }
+
   .flex .image {
-    width: 640px; /*画像サイズ指定*/
+    width: 640px;
+    /*画像サイズ指定*/
     margin: 0;
     padding: 0;
   }
-  
+
   .contents-title1 {
     margin-left: 15px;
     font-size: 20px;
     line-height: 1.5;
   }
+
   .contents-text1 {
     margin-top: 15px;
     margin-left: 10px;
     font-size: 14px;
     line-height: 1.2;
   }
+
   .contents-text1-1 {
     margin-top: 15px;
     margin-left: 10px;
     font-size: 14px;
     line-height: 1.2;
   }
-  .flex2{
-    display: flex; /*横並び*/
+
+  .flex2 {
+    display: flex;
+    /*横並び*/
     flex-direction: column;
     width: 800px;
     max-width: 100%;
@@ -498,6 +529,7 @@
     font-size: 20px;
     line-height: 1.5;
   }
+
   .contents-text2 {
     margin-top: 15px;
     margin-left: 10px;
@@ -505,18 +537,20 @@
     font-size: 14px;
     line-height: 1.2;
   }
-  
+
   /* 画像を天地中央表示 */
-  
+
   .flex .image {
     overflow: hidden;
     position: relative;
   }
+
   .flex .image::before {
     content: "";
     display: block;
     padding-top: 58%;
   }
+
   .flex .image img {
     width: 100%;
     position: absolute;
@@ -526,41 +560,42 @@
     bottom: 0;
     margin: auto;
   }
-/*ふわっとさせる*/
 
-/* その場で */
+  /*ふわっとさせる*/
 
-.fadeLeft{
-  animation-name:fadeLeftAnime;
-  animation-duration:1s;
-  animation-fill-mode:forwards;
-  opacity:0;
+  /* その場で */
+
+  .fadeLeft {
+    animation-name: fadeLeftAnime;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    opacity: 0;
   }
-  
-  @keyframes fadeLeftAnime{
+
+  @keyframes fadeLeftAnime {
     from {
       opacity: 0;
     }
-  
+
     to {
       opacity: 1;
     }
   }
-  
+
   /* その場で */
-  
-  .fadeRight{
-  animation-name:fadeRightAnime;
-  animation-duration:1s;
-  animation-fill-mode:forwards;
-  opacity:0;
+
+  .fadeRight {
+    animation-name: fadeRightAnime;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    opacity: 0;
   }
-  
-  @keyframes fadeRightAnime{
+
+  @keyframes fadeRightAnime {
     from {
       opacity: 0;
     }
-  
+
     to {
       opacity: 1;
     }
