--- a/css/Illustrations.css
+++ b/css/Illustrations.css
@@ -2,19 +2,19 @@
 
 @font-face {
   font-family: "PixelMplus12";
-  src: url(../Fonts.woff)  format('woff');
+  src: url(../Fonts.woff) format('woff');
 }
 
-body{
+body {
   position: relative;
 }
 
-.main{
+.main {
   background-image: url(../images/common/背景.png);
   padding-bottom: 20px;
 }
 
-.title{
+.title {
   height: 80px;
   display: flex;
   flex-direction: column;
@@ -24,9 +24,17 @@ body{
   animation: flicker 1.5s infinite alternate;
   color: #00ffff;
 }
+
 @keyframes flicker {
-  0%, 18%, 22%, 25%, 53%, 57%, 100% {
-      text-shadow:
+
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+    text-shadow:
       0 0 4px #fff,
       0 0 11px #fff,
       0 0 19px #fff,
@@ -36,39 +44,44 @@ body{
       0 0 80px #00ffff,
       0 0 100px #00ffff;
   }
-  20%, 24%, 55% {
-      text-shadow: none;
+
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
   }
 }
-.title h1{
+
+.title h1 {
   font-family: "ab-intore", sans-serif;
   font-size: 50px;
   margin-top: 70px;
 }
 
-.title p{
+.title p {
   font-size: 24px;
   margin-top: 10px;
 }
 
-.box{
-  padding:0 10px;
-  margin:100px 100px 25px 100px;
+.box {
+  padding: 0 10px;
+  margin: 100px 100px 25px 100px;
   padding-bottom: 30px;
   border: 2px solid #e6325f;
-  border-radius:25px;
+  border-radius: 25px;
   box-shadow: 0 0 .2rem #fff,
-  0 0 .2rem #fff,
-  0 0 2rem #e6325f,
-  0 0 0.8rem #e6325f,
-  0 0 2.8rem #e6325f,
-  inset 0 0 1.3rem #e6325f;
+    0 0 .2rem #fff,
+    0 0 2rem #e6325f,
+    0 0 0.8rem #e6325f,
+    0 0 2.8rem #e6325f,
+    inset 0 0 1.3rem #e6325f;
 }
 
-.lum-lightbox.lum-open{
+.lum-lightbox.lum-open {
   z-index: 11;
 }
-.lum-lightbox{
+
+.lum-lightbox {
   font-family: "PixelMplus12";
 }
 
@@ -79,35 +92,35 @@ body{
   margin-left: auto;
   margin-right: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit,300px);
+  grid-template-columns: repeat(auto-fit, 300px);
   column-gap: 30px;
   row-gap: 40px;
   justify-content: center;
 
 }
 
-.illustration-list figure{
+.illustration-list figure {
   position: relative;
   overflow: hidden;
   padding-top: 100%;
   transition: .3s;
 }
 
-.illustration-list figure:hover{
+.illustration-list figure:hover {
   transform: scale(1.1);
-  }
+}
 
-.illustration-list figure img{
+.illustration-list figure img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.illustration-list dl{
+.illustration-list dl {
   margin-top: 20px;
   text-align: center;
   font-family: "PixelMplus12";
@@ -179,44 +192,46 @@ body{
   }
 }
 
-@media (max-width:800px){
+@media (max-width:800px) {
   .title h1 {
     font-size: 30px;
     margin-top: 40px;
   }
 
-  .title p{
+  .title p {
     font-size: 15px;
   }
 
-  .box{
+  .box {
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 15px;
-    margin:40px 15px 10px 15px;
+    margin: 40px 15px 10px 15px;
     border: 2px solid #e6325f;
-    border-radius:25px;
+    border-radius: 25px;
     box-shadow: 0 0 .2rem #fff,
-    0 0 .2rem #fff,
-    0 0 2rem #e6325f,
-    0 0 0.8rem #e6325f,
-    0 0 2.8rem #e6325f,
-    inset 0 0 1.3rem #e6325f;
+      0 0 .2rem #fff,
+      0 0 2rem #e6325f,
+      0 0 0.8rem #e6325f,
+      0 0 2.8rem #e6325f,
+      inset 0 0 1.3rem #e6325f;
   }
 
-  .lum-lightbox.lum-open{
+  .lum-lightbox.lum-open {
     z-index: 11;
   }
-  
-.lum-lightbox-inner img{
-  max-width: 700px; /* 最大幅 */
-  min-width: 240px; /* 最小幅 */
-  width: 100%;
-  object-fit: contain;
-}
+
+  .lum-lightbox-inner img {
+    max-width: 700px;
+    /* 最大幅 */
+    min-width: 240px;
+    /* 最小幅 */
+    width: 100%;
+    object-fit: contain;
+  }
 
 
-  .illustration-list dl{
+  .illustration-list dl {
     margin-top: 20px;
     text-align: center;
     font-family: "PixelMplus12";
@@ -287,8 +302,9 @@ body{
       transform: translateX(100px);
     }
   }
-  }
-  @media (max-width:400px){
+}
+
+@media (max-width:400px) {
   .illustration-list {
     width: 400px;
     max-width: 100%;
@@ -296,8 +312,9 @@ body{
     margin-left: auto;
     margin-right: auto;
     display: block;
-  } 
-  .illustration-list dl{
+  }
+
+  .illustration-list dl {
     margin-top: 15px;
     margin-bottom: 30px;
     text-align: center;
