--- a/css/creator.css
+++ b/css/creator.css
@@ -6,7 +6,7 @@
 }
 
 .main {
-  background-image: url(/images/common/背景.png);
+  background-image: url(../images/common/背景.png);
   padding-bottom: 20px;
 }
 
@@ -72,6 +72,7 @@
 .title p {
   font-size: 24px;
   margin-top: 10px;
+  font-family: "PixelMplus12";
 }
 
 .Illustration-top,
