--- a/css/chronology.css
+++ b/css/chronology.css
@@ -81,8 +81,9 @@
 .box {
   font-family: "PixelMplus12";
   padding: 0 20px;
-  margin: 100px 100px 25px 100px;
+  margin: 100px auto 50px;
   padding-bottom: 30px;
+  max-width: 1240px;
   border: 2px solid #e6325f;
   border-radius: 25px;
   box-shadow: 0 0 .2rem #fff,
@@ -92,6 +93,12 @@
     0 0 2.8rem #e6325f,
     inset 0 0 1.3rem #e6325f;
 
+}
+
+@media screen and (min-width:801px) and ( max-width:1270px){
+  .box {
+    margin: 100px 15px 50px;
+  }
 }
 
 .flex1 {
@@ -600,6 +607,246 @@
     to {
       opacity: 1;
     }
+  }
+
+}
+
+
+
+
+
+/*年表ボックス*/
+
+.chonologyBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  padding: 20px;
+  width: 100%;
+  border: 2px solid #e6325f;
+  background-color: rgba(0, 0, 0, 0.4);
+  box-sizing: border-box;
+  opacity: 0;
+  transition: all 0.8s;
+}
+.chonologyBox:nth-child(odd) {
+  transform: translate3d(10%,0,0);
+}
+
+.chonologyBox:nth-child(even) {
+  flex-direction: row-reverse;
+  transform: translate3d(-10%,0,0);
+}
+
+.chonologyBox.is-active {
+  transform: translate3d(0,0,0) !important;
+  opacity: 1;
+}
+
+.chonologyBox>* {
+  width: calc(50% - 10px);
+}
+
+.chonologyBox .chonologyDate01 {
+  margin-bottom: 5px;
+  font-size: 20px;
+}
+
+.chonologyBox .chonologyTitle01 {
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  font-size: 22px;
+  border-bottom: 2px solid #e6325f;
+  line-height: 1.5;
+}
+
+.chonologyBox .chonologyText01 {
+  font-size: 15px;
+  line-height: 1.5;
+}
+
+.chonologyBox .imageBlock .image {
+  background-color: #fff;
+}
+
+.chonologyBox .imageBlock img {
+  vertical-align: bottom;
+  transition: all 0.3s;
+}
+.chonologyBox .imageBlock a:hover img {
+  opacity: 0.7;
+}
+
+.chonologyBox .imageBlock .image.is-special {
+  position: relative;
+}
+
+.chonologyBox .imageBlock .image.is-special img.is-hide {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.chonologyBox .imageBlock .image.is-special:hover img.is-hide {
+  opacity: 0.7;
+}
+
+.chonologyBox .imageBlock .image.is-special:hover img.is-normal {
+  opacity: 0;
+}
+
+.chonologyBox .chonologyText01.is-hide {
+  position: relative;
+  margin-top: 15px;
+}
+
+.chonologyBox .chonologyText01.is-hide:after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.chonologyBox .chonologyText01.is-hide:hover:after {
+  opacity: 0;
+}
+
+
+.chonologyBox .chonologyTitle01 .hide {
+  display: none;
+}
+.chonologyBox .chonologyTitle01.is-active .hide {
+  display: block;
+}
+
+.chonologyBox .chonologyTitle01.is-active .normal {
+  display: none;
+}
+
+
+
+.splide, .splide__track, .splide__list, .splide__slide {
+  width: 100%;
+}
+.splide .splide__slide a,.splide .splide__slide .image, .splide .splide__slide img {
+  display: block;
+  width: 100%;
+}
+.splide .splide__slide {
+  background-color: #fff;
+}
+
+
+
+.splide .splide__arrow {
+  background-color: transparent;
+  filter: drop-shadow(0 0 0.5px #fff)
+    drop-shadow(0 0 1.75px #00ffff)
+    drop-shadow(0 0 1px #00ffff)
+    drop-shadow(0 0 2.5px #00ffff);
+    opacity: 1;
+}
+
+.splide .splide__arrow.splide__arrow--prev {
+  left: 0;
+}
+
+.splide .splide__arrow.splide__arrow--next {
+  right: 0;
+}
+
+.splide .splide__arrow:after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 15px;
+  height: 15px;
+  border: solid #fff;
+  box-sizing: border-box;
+}
+
+.splide .splide__arrow.splide__arrow--next:after {
+  border-width: 2px 2px 0 0 !important;
+  transform: translate3d(-25%,0,0) rotate(45deg);
+}
+.splide .splide__arrow.splide__arrow--prev:after {
+  border-width: 0 0 2px 2px !important;
+  transform: translate3d(25%,0,0) rotate(45deg);
+}
+
+
+.splide .splide__arrow:disabled {
+  filter: none;
+}
+
+.splide .splide__arrow svg {
+  display: none;
+}
+
+.splide__pagination .splide__pagination__page {
+  margin: 5px;
+  background-color: #fff;
+  opacity: 1;
+}
+.splide__pagination .splide__pagination__page.is-active {
+  transform: scale(1,1);
+  filter: drop-shadow(0 0 0.5px #fff)
+    drop-shadow(0 0 1.75px #00ffff)
+    drop-shadow(0 0 1px #00ffff)
+    drop-shadow(0 0 2.5px #00ffff);
+}
+
+
+@media (max-width:800px) {
+  .chonologyBox {
+    flex-direction: column !important;
+    margin-top: 30px;
+    padding: 10px;
+    gap: 15px;
+  }
+
+  .chonologyBox:nth-child(odd),.chonologyBox:nth-child(even) {
+    transform: translate3d(0,30px,0);
+  }
+
+  .chonologyBox>* {
+    width: 100%;
+  }
+  .chonologyBox .chonologyDate01 {
+    font-size: 15px;
+  }
+  .chonologyBox .chonologyTitle01 {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    font-size: 18px;
+  }
+  .chonologyBox .chonologyText01 {
+    font-size: 14px;
+  }
+
+  .splide .splide__arrow:after {
+    width: 12px;
+    height: 12px;
+  }
+
+  .splide__pagination .splide__pagination__page {
+    margin: 3px;
+    width: 5px;
+    height: 5px;
   }
 
 }
