リンク修正

--- a/_chonology_list/chronology.pug
+++ b/_chonology_list/chronology.pug
@@ -13,7 +13,7 @@ html
 						"https://www.youtube.com/watch?v=HxjHOox1Es8",
 					],
 					img: [
-						"2023_01_16_デビュー告知.png",
+						"2023_01_16_デビュー告知.png",
 					],
 					date: "2023/01/16",
 					title: "石神のぞみデビュー",
